--- a/login.html
+++ b/login.html
@@ -24,8 +24,8 @@
             
         <div class="login-slider">
             <div class="owl-carousel owl-theme">
-                <div class="item"><img src="images/slider1.jpg" alt=""></div>
-                <div class="item"><img src="images/slider1.jpg" alt=""></div>
+        <div class="item"><img src="images/dog.jpg" alt=""></div>
+                <div class="item"><img src="images/cat.jpg" alt=""></div>
                 <div class="item"><img src="images/slider1.jpg" alt=""></div>
             </div>
         </div>
