--- a/no_results.html
+++ b/no_results.html
@@ -17,13 +17,11 @@
 checkLogin();
 </script>
 </head>
-
 <body class="bottom-links-bar">
 <nav class="navbar navbar-expand-lg navbar-light bg-light navmainsection">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation"> 
     <span class="navbar-toggler-icon"><img src="images/menubar.png"/></span>
   </button>
-  
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
@@ -37,14 +35,12 @@ checkLogin();
     </ul>
   </div>
 </nav>
-
 <div class="container">
     <div class="your-connections mt-4">
         <h1 class="red">No results found.</h1>
         <div class="table-responsive mb-3">
-            <p class="noresults">Sorry, no result found as per your profile setting. Please update your beed profile.</p>
+            <p class="noresults">Sorry, no result found as per your profile setting. Please update your breed profile.</p>
         </div>
- 				      
     </div>
 </div>
 <div class="bottom-fixed-bar">
