--- a/profile-info.html
+++ b/profile-info.html
@@ -52,7 +52,7 @@
                 </select>
             </div>            
             <div class="form-group">
-                <label><span class="reqfield">*</span>Distance willing to Look (miles)</label>
+                <label><span class="reqfield">*</span>How far are you willing to look</label>
                 <select class="form-control" name="willing_distance" id="willing_distance" tabindex="4">
                     <option value="">Please select</option>                    
                     <option value="5"> 5 Miles</option>                    
