--- a/login.html
+++ b/login.html
@@ -16,18 +16,14 @@
 <script src="js/function.js"></script>
 </head>
 
-<body>
+<body onLoad="Imgslider();">
 <div class="login-screen">
     <div class="container">
         <h1>Discover New And Interesting<br>
             <span class="red"> Pet Animals Nearby</span></h1>
             
         <div class="login-slider">
-            <div class="owl-carousel owl-theme">
-        <div class="item"><img src="images/dog.jpg" alt=""></div>
-                <div class="item"><img src="images/cat.jpg" alt=""></div>
-                <div class="item"><img src="images/slider1.jpg" alt=""></div>
-            </div>
+            <div class="owl-carousel owl-theme" id="slider_img"></div>
         </div>
         
         <div class="login-intro"> By tapping Log In, you agree with our<br>
@@ -43,12 +39,30 @@
 <script src="js/bootstrap.min.js"></script> 
 <script src="js/owl.carousel.js"></script> 
 <script type="text/javascript">
-$('.owl-carousel').owlCarousel({
-    loop:false,
-    margin:0,
-    nav:false,
-	items:1
-})
+function Imgslider(){
+$.ajax({
+	 type: 'POST',
+	 url: siteurl + 'common/common/slider',
+	 dataType: 'json',
+	 data: {image:'img'},
+	 crossDomain: true,
+	 success: function(data){	 
+		
+	   	if(data['success'])
+		{			
+			$('#slider_img').html(data['success']);
+			
+			$('.owl-carousel').owlCarousel({
+				loop:false,
+				margin:0,
+				nav:false,
+				items:1
+			})			
+		}
+	 }
+   });	
+	
+}
 </script>
 </body>
 </html>
