--- a/edit-profile.html
+++ b/edit-profile.html
@@ -88,7 +88,7 @@
             
             
             <div class="form-group">
-                <label><span class="reqfield">*</span>How far are you willing to look</label>
+                <label><span class="reqfield">*</span>How far are you willing to look ?</label>
                 <select class="form-control" name="willing_distance" id="willing_distance" tabindex="5">
                     <option value="">Please select</option>                    
                     <option value="5"> 5 Miles</option>                   
