--- a/edit-profile.html
+++ b/edit-profile.html
@@ -28,11 +28,13 @@
       <li class="nav-item active">
         <a class="nav-link" href="swipe.html">Home <span class="sr-only">Profile</span></a>
       </li>
+      <li class="nav-item"><a class="nav-link" href="view-profile.html">My Profile</a></li>
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0);">Setting</a>
      </li>
 	   <li class="nav-item">
         <a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a>
+        </li>
     </ul>
   </div>
 </nav>
@@ -84,8 +86,7 @@
                 <select name="city" id="city" class="form-control">
                 <option value="">Please select</option>
                 </select>
-            </div>
-            
+            </div>      
             
             <div class="form-group">
                 <label><span class="reqfield">*</span>How far are you willing to look ?</label>
