--- a/login.html
+++ b/login.html
@@ -15,8 +15,10 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/function.js"></script>
 </head>
-
 <body onLoad="Imgslider();">
+
+
+
 <div class="login-screen">
     <div class="container">
         <h1>Discover New And Interesting<br>
@@ -27,7 +29,7 @@
         </div>
         
         <div class="login-intro"> By tapping Log In, you agree with our<br>
-            <a href="#">Terms of Service</a> and <a href="#"> Privacy Policy</a> <br>
+            <a href="infopage.html?page_id=1">Terms of Service</a> and <a href="infopage.html?page_id=2"> Privacy Policy</a> <br>
          </div>
             
         <div class="login-button-group mt-4"> 
