--- a/forums-detail.html
+++ b/forums-detail.html
@@ -17,17 +17,12 @@
  checkLogin();
 </script>
 </head>
-
 <body class="bottom-links-bar forums-page" onLoad="getFourum();">
-
 <div class="container">
-
-  <div class="message-board mt-4" id="forum_info"></div>  
+  <div class="message-board mt-4" id="forum_info"></div>
   <div class="modal fade modelcommon model_center_pop_up" id="modal_error" role="dialog">
               <div class="modal-content">
-                <div id="common_popup">
-                  
-                </div>
+                <div id="common_popup"></div>
                 <button class="ok_onfirm_btn" data-dismiss="modal">OK</button>
               </div>
         </div>
@@ -58,9 +53,8 @@ $.ajax({
 		
 	   	if(data['success'])
 		{
-			$('#forum_info').html(data['success']);	
+			$('#forum_info').html(data['success']);
 		}
-		
 	 }
    });	
 	
