--- a/your-connections.html
+++ b/your-connections.html
@@ -26,12 +26,7 @@
         <a class="nav-link" href="swipe.html">Home <span class="sr-only">Profile</span></a>
       </li>
       <li class="nav-item"><a class="nav-link" href="view-profile.html">My Profile</a></li>
-      <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0);">Setting</a>
-     </li>
-	   <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a>
-        </li>
+	   <li class="nav-item"><a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a></li>
     </ul>
   </div>
 </nav>
