--- a/new-topic.html
+++ b/new-topic.html
@@ -52,7 +52,7 @@
     <div class="container">
         <table class="table">
              <tr>
-                <td><a href="edit-profile.html"><img src="images/user-icon.png" alt=""></a></td>
+                <td><a href="view-profile.html"><img src="images/user-icon.png" alt="view"></a></td>
                 <td class="text-center"><a href="your-connections.html"><img src="images/heart-icon.png" alt=""></a></td>
                 <td class="text-right"><a href="forums.html"><img src="images/chat-icon.png" alt=""></a></td>
             </tr>
