--- a/forums-detail.html
+++ b/forums-detail.html
@@ -27,11 +27,11 @@
               </div>
         </div>
 </div>
-<div class="bottom-fixed-bar">
+<div class="bottom-fixed-bar" id="bottom_bar">
   <div class="container">
     <table class="table">
       <tr>
-        <td><a href="edit-profile.html"><img src="images/user-icon.png" alt=""></a></td>
+        <td><a href="view-profile.html"><img src="images/user-icon.png" alt=""></a></td>
         <td class="text-center"><a href="your-connections.html"><img src="images/heart-icon.png" alt=""></a></td>
         <td class="text-right"><a href="forums.html"><img src="images/chat-icon.png" alt=""></a></td>
       </tr>
@@ -103,5 +103,10 @@ function postComment(){
    });	
 
 }
+
+chatMessage(login_id);
+	setInterval(function() {
+		chatMessage(login_id);
+	}, 10000);
 </script>
 </html>
