--- a/no_results.html
+++ b/no_results.html
@@ -27,9 +27,7 @@ checkLogin();
       <li class="nav-item active">
         <a class="nav-link" href="swipe.html">Home <span class="sr-only">Profile</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0);">Setting</a>
-     </li>
+      <li class="nav-item"><a class="nav-link" href="edit-profile.html">Edit Profile</a></li>
 	   <li class="nav-item">
         <a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a>
     </ul>
@@ -43,16 +41,23 @@ checkLogin();
         </div>
     </div>
 </div>
-<div class="bottom-fixed-bar">
+<div class="bottom-fixed-bar" id="bottom_bar">
     <div class="container">
         <table class="table">
             <tr>
-                <td><a href="edit-profile.html"><img src="images/user-icon.png" alt=""></a></td>
+                <td><a href="view-profile.html"><img src="images/user-icon.png" alt="view profile"></a></td>
                 <td class="text-center"><a href="your-connections.html"><img src="images/heart-icon.png" alt=""></a></td>
                 <td class="text-right"><a href="forums.html"><img src="images/chat-icon.png" alt=""></a></td>
             </tr>
         </table>
     </div>
 </div>
+<script type="text/javascript">
+var login_id = localStorage.getItem('cust_id');
+chatMessage(login_id);
+	setInterval(function() {
+		chatMessage(login_id);
+	}, 10000);
+</script>
 </body>
 </html>
