--- a/view-breedprofile.html
+++ b/view-breedprofile.html
@@ -113,7 +113,7 @@
         </table>
     </div>
 </div>
-<script type="text/javascript">
+<script type="text/javascript" id="bottom_bar">
 var login_id = gup('cust_id');
 
 $.ajax({
@@ -177,6 +177,11 @@ $.ajax({
 			}			
 	   }
    });
+   
+chatMessage(login_id);
+	setInterval(function() {
+		chatMessage(login_id);
+	}, 10000);
 </script>
 </body>
 </html>
