--- a/view-profile.html
+++ b/view-profile.html
@@ -26,7 +26,7 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active"><a class="nav-link" href="swipe.html">Home <span class="sr-only">Profile</span></a></li>
-      <li class="nav-item"><a class="nav-link" href="view-profile.html">My Profile</a></li>
+      <li class="nav-item"><a class="nav-link" href="edit-profile.html">Edit Profile</a></li>
 	   <li class="nav-item"><a class="nav-link" href="javascript:void(0);" onClick="logOut();">Logout</a></li>
     </ul>
   </div>
@@ -107,11 +107,11 @@
             </div>
     </div>
 </div>
-<div class="bottom-fixed-bar">
+<div class="bottom-fixed-bar" id="bottom_bar">
     <div class="container">
         <table class="table">
              <tr>
-                <td><a href="edit-profile.html"><img src="images/user-icon.png" alt=""></a></td>
+                <td><a href="view-profile.html"><img src="images/user-icon.png" alt="profile"></a></td>
                 <td class="text-center"><a href="your-connections.html"><img src="images/heart-icon.png" alt=""></a></td>
                 <td class="text-right"><a href="forums.html"><img src="images/chat-icon.png" alt=""></a></td>
             </tr>
@@ -182,6 +182,12 @@ $.ajax({
 			}			
 	   }
    });
+ 
+ chatMessage(login_id);
+	setInterval(function() {
+		chatMessage(login_id);
+	}, 10000);
+ 
 </script>
 </body>
 </html>
