--- a/phone-login.html
+++ b/phone-login.html
@@ -62,9 +62,9 @@ document.addEventListener("deviceready", function(){
     <form>
         <div class="phone-login" id="mobile_no_container">
         <input type="hidden" name="isdcode" id="isdcode" value="1">		
-            <h3>Enter your country code and mobile number</h3>
+            <h3>Enter mobile number</h3>
             <div class="phone-login-field phloginfld">				
-                <input type="number" maxlength="10" name="customer_mobile" id="customer_mobile" class="form-control" placeholder="Enter your mobile number">
+                <input type="number" maxlength="10" name="customer_mobile" id="customer_mobile" class="form-control" placeholder="Enter Mobile number">
             </div>
             <button type="button" class="btn btn-block btn-danger" onClick="loginNow();">NEXT</button>
         </div>
