--- a/forums.html
+++ b/forums.html
@@ -68,7 +68,7 @@ function getForums(category_id){
    });	
 }
 
-	setInterval(function() {
+	 setTimeout(function() {
 		chatMessage(login_id);
 	}, 10000);
 </script>
