--- a/view-breedprofile.html
+++ b/view-breedprofile.html
@@ -178,7 +178,7 @@ $.ajax({
 	   }
    });
    
-	setInterval(function() {
+	 setTimeout(function() {
 		chatMessage(login_id);
 	}, 10000);
 </script>
