--- a/edit-profile.html
+++ b/edit-profile.html
@@ -617,7 +617,7 @@ $.ajax({
 
 
 <script type="text/javascript">
-	setInterval(function() {
+	 setTimeout(function() {
 		chatMessage(login_id);
 	}, 10000);
 </script>
