--- a/forums-detail.html
+++ b/forums-detail.html
@@ -106,7 +106,7 @@ function postComment(){
 }
 
 
-	setInterval(function() {
+	 setTimeout(function() {
 		chatMessage(login_id);
 	}, 10000);
 </script>
