--- a/no_results.html
+++ b/no_results.html
@@ -55,7 +55,7 @@ checkLogin();
 <script type="text/javascript">
 var login_id = localStorage.getItem('cust_id');
 
-	setInterval(function(){
+	 setTimeout(function(){
 		chatMessage(login_id);
 	}, 10000);
 </script>
