--- a/swipe.html
+++ b/swipe.html
@@ -236,7 +236,7 @@ function report(subject)
 }
 
 
-setInterval(function(){
+ setTimeout(function(){
 		chatMessage(login_id);
 }, 10000);
 </script>
