--- a/login.html
+++ b/login.html
@@ -32,8 +32,8 @@
             <a href="infopage.html?page_id=1">Terms of Service</a> and <a href="infopage.html?page_id=2"> Privacy Policy</a> <br>
          </div>
             
-        <div class="login-button-group mt-4"> 
-        <a href="#" class="btn btn-block btn-primary">LOG IN WITH FACEBOOK</a> <a href="phone-login.html" class="btn btn-block btn-phone">LOG IN WITH PHONE NUMBER</a> 
+        <div class="login-button-group mt-4 loginmn"> 
+        <!--<a href="#" class="btn btn-block btn-primary">LOG IN WITH FACEBOOK</a>--> <a href="phone-login.html" class="btn btn-block btn-phone">LOG IN WITH PHONE NUMBER</a> 
         </div>
         
     </div>
