--- a/forums-detail.html
+++ b/forums-detail.html
@@ -105,8 +105,8 @@ function postComment(){
 
 }
 
-
-	 setTimeout(function() {
+chatMessage(login_id);
+	setTimeout(function() {
 		chatMessage(login_id);
 	}, 10000);
 </script>
