--- a/new-topic.html
+++ b/new-topic.html
@@ -21,7 +21,7 @@
 <div class="container">
     <div class="new-topic mt-4">
         <h1 class="red">New Topic</h1>
-        	<a href="forums.html"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
+        	<a class="backbtn bkbtnn" href="forums.html"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
             <div class="form-group">
                 <label>Category</label>
                 <select class="form-control" name="category" id="category">
@@ -60,6 +60,7 @@
     </div>
 </div>
 <script type="text/javascript">
+var login_id = localStorage.getItem('cust_id');
 $(document).ready(function(e){
     //$('#modal_common').modal('show');
 	
@@ -133,6 +134,10 @@ function addForum(){
    });	
 
 }
+
+ setTimeout(function(){
+		chatMessage(login_id);
+}, 10000);
 </script>
 </body>
 </html>
