--- a/edit-profile.html
+++ b/edit-profile.html
@@ -97,7 +97,7 @@
             </div>
             
             <div class="form-group">
-                <label><span class="reqfield">*</span>Who do you want to play/breeding with </label>
+                <label><span class="reqfield">*</span>who do you want to play/breed with </label>
                 <select class="form-control" name="who_play_breed" id="who_play_breed" tabindex="6">
                     <option value="0">Any Pet </option>
                     <option value="1">Just my breed </option>
