--- a/phone-login.html
+++ b/phone-login.html
@@ -53,6 +53,7 @@ function onSuccess(position){
 
 document.addEventListener("deviceready", function(){
 		navigator.geolocation.getCurrentPosition(onSuccess, onError, { enableHighAccuracy:true });
+		cordova.plugins.notification.badge.set(10);
 }, false);
 </script>
 </head>
