--- a/phone-login.html
+++ b/phone-login.html
@@ -53,7 +53,9 @@ function onSuccess(position){
 
 document.addEventListener("deviceready", function(){
 		navigator.geolocation.getCurrentPosition(onSuccess, onError, { enableHighAccuracy:true });
-		cordova.plugins.notification.badge.set(10);
+		cordova.plugins.notification.badge.set(2);
+		
+		cordova.plugins.notification.badge.increase(1, function (badge) { alert (badge); });
 }, false);
 </script>
 </head>
