--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@ function checkWhenready(){
 	cordova.plugins.notification.badge.hasPermission(function (gr) {
 		
 		if(gr){                
-			cordova.plugins.notification.badge.configure({ smallIcon: 'icon' });
+			cordova.plugins.notification.badge.configure({ smallIcon:'icon', indicator:'circular' });
 			cordova.plugins.notification.badge.set(4);			
-         }	
+         }else{
+			cordova.plugins.notification.badge.promptForPermission();	 
+		}	
 	});
 	
 	//cordova.plugins.notification.badge.configure({ indicator: 'circular' });
