--- a/view-profile.html
+++ b/view-profile.html
@@ -16,7 +16,17 @@
 <script src="js/function.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script type="text/javascript">
- checkLogin();
+function checkWhenready(){	
+	checkLogin();
+	if(localStorage.getItem('cust_id')){
+			setTimeout(function(){
+			chatMessage(localStorage.getItem('cust_id'));
+		  }, 10000);
+  
+	}
+}
+
+document.addEventListener("deviceready", checkWhenready, false);
 </script>
 </head>
 <body class="bottom-links-bar profile-swipes">
@@ -119,12 +129,7 @@ $.ajax({
 		
 						
 	   }
-   });
- 
-	 setTimeout(function() {
-		chatMessage(login_id);
-	}, 10000);
- 
+   }); 
 </script>
 </body>
 </html>
