--- a/breed-detail.html
+++ b/breed-detail.html
@@ -16,9 +16,16 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/function.js"></script> 
 <script type="text/javascript">
-checkLogin();
 function checkdeviceLogin(){
+	checkLogin();
 	loadProfile();
+	if(localStorage.getItem('cust_id')){
+			setTimeout(function(){
+			chatMessage(localStorage.getItem('cust_id'));
+		  }, 10000);
+  
+	}
+	
 }
 document.addEventListener("deviceready", checkdeviceLogin, false);
 </script>
