--- a/edit-profile.html
+++ b/edit-profile.html
@@ -14,7 +14,17 @@
 <script src="js/function.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script type="text/javascript">
- checkLogin();
+function checkWhenready(){	
+	checkLogin();
+	if(localStorage.getItem('cust_id')){
+			setTimeout(function(){
+			chatMessage(localStorage.getItem('cust_id'));
+		  }, 10000);
+  
+	}
+}
+
+document.addEventListener("deviceready", checkWhenready, false);
 </script>
 </head>
 <body class="bottom-links-bar">
@@ -613,13 +623,6 @@ $.ajax({
 			
 	   }
    });
-</script>
-
-
-<script type="text/javascript">
-	 setTimeout(function() {
-		chatMessage(login_id);
-	}, 10000);
 </script>
 </body>
 </html>
