--- a/edit-profile.html
+++ b/edit-profile.html
@@ -17,10 +17,10 @@
 function checkWhenready(){	
 	checkLogin();
 	if(localStorage.getItem('cust_id')){
-			setTimeout(function(){
+		setInterval(function(){
 			chatMessage(localStorage.getItem('cust_id'));
-		  }, 10000);
-  
+			messageCount(localStorage.getItem('cust_id'));
+		  }, 5000);  
 	}
 }
 
