--- a/profile-detail.html
+++ b/profile-detail.html
@@ -21,10 +21,10 @@ function checkdeviceLogin(){
 	loadProfile();
 	
 	if(localStorage.getItem('cust_id')){
-			setTimeout(function(){
+		setInterval(function(){
 			chatMessage(localStorage.getItem('cust_id'));
-		  }, 10000);
-  
+			messageCount(localStorage.getItem('cust_id'));
+		  }, 5000);  
 	}
 }
 document.addEventListener("deviceready", checkdeviceLogin, false);
